# universal_caption

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manifest.json
backend/: .env.example  README.md  config.py  events.py  main.py  pyproject.toml  session_manager.py
backend/db/: database.py  queries.py  schema_v1.md
backend/db/migrations/: 001_initial.sql
backend/endpoints/: websocket.py
backend/providers/: factory.py  local_whisper.py  openai_chunked.py  openai_realtime.py
backend/tests/: test_backend.py
background/: service-worker.js
content/: caption-overlay.js
offscreen/: audio-processor.js  offscreen-main.js  offscreen.html
pip/: pip-window.html
popup/: popup.html  popup.js
