[project]
name = "backend"
version = "0.1.0"
description = "Universal Captions API — provider-agnostic live transcription server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "asyncpg>=0.30.0",
    "redis[asyncio]>=5.2.0",
    "openai>=1.57.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.28"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
